--- a/static/css/summary.less
+++ b/static/css/summary.less
@@ -85,7 +85,7 @@
         color: @darkgray;
 
         &__max {
-            max-width: percentage(7 / 8);
+            max-width: unit(656px / @base-font-size-px, em);
         }
     }
 
