--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4905,10 +4905,52 @@ img {
         <span class="cf-form_input-icon cf-icon cf-icon-approved-round">
           <span class="jekyll-bug"></span>
         </span>
+    - name: Styled select
+      markup: |
+        <div class="select">
+            <span class="select_icon cf-icon cf-icon-play"></span>
+            <select class="input__light">
+                <option value="option1">Option 1</option>
+                <option value="option2">Option 2</option>
+                <option value="option3">Option 3</option>
+                <option value="option4">Option 4</option>
+            </select>
+        </div>
     tags:
     - cfgov-misc
 */
 /* NOTE: all select[multiple] styles extend input[type="text"]. */
+.input__light {
+  border-color: #babbbd;
+  color: #babbbd;
+}
+.select {
+  position: relative;
+  background: #ffffff;
+}
+.select select {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  position: relative;
+  z-index: 2;
+  background: transparent;
+}
+.select_icon {
+  position: absolute;
+  top: 0.3125em;
+  right: 9px;
+  z-index: 1;
+  line-height: 1.375;
+  color: #babbbd;
+}
+.select_icon.cf-icon-play {
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
 /* topdoc
   name: Form labels
   family: cfgov-misc
@@ -4977,6 +5019,54 @@ img {
 }
 .lt-ie9 .form-label-header {
   font-weight: normal !important;
+}
+/* topdoc
+  name: Form inputs
+  family: cfgov-misc
+  patterns:
+    - name: Horizontal inputs
+      markup: |
+        <div class="input-group">
+            <input class="input-group_item" type="text">
+            <input class="input-group_item" type="text">
+        </div>
+        <br>
+        <br>
+        <div class="input-group">
+            <select class="input-group_item">
+                <option value="option1">Option 1</option>
+                <option value="option2">Option 2</option>
+                <option value="option3">Option 3</option>
+                <option value="option4">Option 4</option>
+            </select>
+            <select class="input-group_item">
+                <option value="option1">Option 1</option>
+                <option value="option2">Option 2</option>
+                <option value="option3">Option 3</option>
+                <option value="option4">Option 4</option>
+            </select>
+        </div>
+  tags:
+    - cfgov-misc
+*/
+.input-group_item,
+.input-group_item[type="text"] {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 50%;
+  z-index: 1;
+  position: relative;
+}
+.input-group_item + .input-group_item,
+.input-group_item + .input-group_item[type="text"],
+.input-group_item[type="text"] + .input-group_item,
+.input-group_item[type="text"] + .input-group_item[type="text"] {
+  margin-left: -5px;
+}
+.input-group_item:focus,
+.input-group_item[type="text"]:focus {
+  z-index: 2;
 }
 /* topdoc
   name: Form groups
