--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -1709,7 +1709,7 @@ input[type="url"],
 input[type="tel"],
 input[type="number"],
 textarea,
-select {
+select[multiple] {
   display: inline-block;
   width: 85%;
   margin: 0;
@@ -1738,8 +1738,8 @@ input[type="number"]:focus,
 input[type="number"].focus,
 textarea:focus,
 textarea.focus,
-select:focus,
-select.focus {
+select[multiple]:focus,
+select[multiple].focus {
   border: 1px solid #0072ce;
   border-color: #0072ce;
   outline: 1px solid #0072ce;
@@ -1755,7 +1755,7 @@ input[type="url"].error,
 input[type="tel"].error,
 input[type="number"].error,
 textarea.error,
-select.error {
+select[multiple].error {
   border: 1px solid #d12124;
   outline: 1px solid #d12124;
 }
@@ -1767,7 +1767,7 @@ input[type="url"].success,
 input[type="tel"].success,
 input[type="number"].success,
 textarea.success,
-select.success {
+select[multiple].success {
   border: 1px solid #2cb34a;
   outline: 1px solid #2cb34a;
 }
