--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4682,7 +4682,7 @@ img {
 
 .content_main,
 .content_sidebar {
-  padding: 2em 15px;
+  padding: 1.875em 0.9375em;
 }
 
 .content_main,
@@ -4696,6 +4696,7 @@ img {
   margin-right: -0.25em;
   vertical-align: top;
   width: 100%;
+  padding: 3.75em 0.9375em;
 }
 
 .ie .content_main,
@@ -4815,11 +4816,11 @@ img {
 
 .content_main,
 .content_sidebar {
-  padding: 2em 0;
+  padding: 3.75em 0;
 }
 
 .content__bleedbar .content_sidebar {
-  padding: 2em 15px;
+  padding: 2em 0.9375em;
   background: #f1f2f2;
 }
 
@@ -4828,7 +4829,7 @@ img {
 }
 
 .content__bleedbar .content_sidebar {
-  padding: 2em 0 2em 30px;
+  padding: 3.75em 0 0.9375em 1.875em;
   margin-left: 0;
   background: transparent;
 }
