--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5484,6 +5484,14 @@ img {
         - .list_link
       notes:
         - "Notice that you can use any element for .list_link."
+    - name: List link large modifier
+      markup: |
+        <a class="list_link list_link__large">List link</a>
+        <span class="list_link list_link__large">List link</span>
+      codenotes:
+        - .list_link__large
+      notes:
+        - "Notice that you can use any element for .list_link__large."
   tags:
     - cfgov-misc
 */
@@ -5493,6 +5501,35 @@ img {
   font-weight: 500;
 }
 .lt-ie9 .list_link {
+  font-weight: normal !important;
+}
+.list_link__large {
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 0.22727273em;
+  font-size: 1.375em;
+  line-height: 1.27272727;
+}
+.list_link__large em,
+.list_link__large i {
+  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+.lt-ie9 .list_link__large em,
+.lt-ie9 .list_link__large i {
+  font-style: normal !important;
+}
+.list_link__large strong,
+.list_link__large b {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+.lt-ie9 .list_link__large strong,
+.lt-ie9 .list_link__large b {
   font-weight: normal !important;
 }
 /* topdoc
