Updates list_link__large colors.

--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -663,6 +663,11 @@ select[multiple].success {
 
 .list_link__large {
     .h3();
+
+    a& {
+        .u-link__colors(@black);
+        .u-link__hover-border();
+    }
 }
 
 
