--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -5190,7 +5190,7 @@ img {
   display: block;
   margin-bottom: 0.44444444em;
   color: #101820;
-  border-bottom-color: #0072ce;
+  border-bottom-color: #101820;
 }
 
 .lt-ie9 .category-slug {
@@ -5199,25 +5199,25 @@ img {
 
 .category-slug:visited,
 .category-slug.visited {
-  border-bottom-color: #005e5d;
+  border-bottom-color: #101820;
   color: #101820;
 }
 
 .category-slug:hover,
 .category-slug.hover {
-  border-bottom-color: #7fb8e6;
+  border-bottom-color: #328ed8;
   color: #328ed8;
 }
 
 .category-slug:focus,
 .category-slug.focus {
-  border-bottom-color: #0072ce;
+  border-bottom-color: #328ed8;
   color: #328ed8;
 }
 
 .category-slug:active,
 .category-slug.active {
-  border-bottom-color: #002d72;
+  border-bottom-color: #101820;
   color: #101820;
 }
 
@@ -6097,31 +6097,31 @@ img {
 
 a.list_link__large {
   color: #101820;
-  border-bottom-color: #0072ce;
+  border-bottom-color: #101820;
   border-bottom-width: 0 !important;
 }
 
 a.list_link__large:visited,
 a.list_link__large.visited {
-  border-bottom-color: #005e5d;
+  border-bottom-color: #101820;
   color: #101820;
 }
 
 a.list_link__large:hover,
 a.list_link__large.hover {
-  border-bottom-color: #7fb8e6;
+  border-bottom-color: #101820;
   color: #101820;
 }
 
 a.list_link__large:focus,
 a.list_link__large.focus {
-  border-bottom-color: #0072ce;
+  border-bottom-color: #101820;
   color: #101820;
 }
 
 a.list_link__large:active,
 a.list_link__large.active {
-  border-bottom-color: #002d72;
+  border-bottom-color: #101820;
   color: #101820;
 }
 
@@ -6418,31 +6418,31 @@ a.list_link__large.focus {
   font-size: 1.625em;
   line-height: 1;
   color: #43484e;
-  border-bottom-color: #0072ce;
+  border-bottom-color: #43484e;
   border-bottom-width: 0 !important;
 }
 
 .share-icon:visited,
 .share-icon.visited {
-  border-bottom-color: #005e5d;
+  border-bottom-color: #43484e;
   color: #43484e;
 }
 
 .share-icon:hover,
 .share-icon.hover {
-  border-bottom-color: #7fb8e6;
+  border-bottom-color: #328ed8;
   color: #328ed8;
 }
 
 .share-icon:focus,
 .share-icon.focus {
-  border-bottom-color: #0072ce;
+  border-bottom-color: #328ed8;
   color: #328ed8;
 }
 
 .share-icon:active,
 .share-icon.active {
-  border-bottom-color: #002d72;
+  border-bottom-color: #43484e;
   color: #43484e;
 }
 
