--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -665,8 +665,8 @@ select[multiple].success {
     .h3();
 
     a& {
-        .u-link__colors(@black);
-        .u-link__hover-border();
+        .u-link__colors(@black, @pacific-80);
+        .u-link__no-border();
     }
 }
 
