--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2901,11 +2901,6 @@ textarea {
   top: 0;
   right: 0;
 }
-.pagination_label {
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 0.875em;
-}
 .pagination_form {
   display: block;
   padding: 0.25em 1.875em;
@@ -2937,7 +2932,18 @@ textarea {
 .lt-ie9 .pagination_form b {
   font-weight: normal !important;
 }
-input[type="number"].pagination_current-page {
+.pagination_label {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 0.875em;
+}
+.lt-ie8 .pagination_label {
+  zoom: 1;
+  display: inline;
+}
+.pagination_current-page,
+input[type="number"].pagination_current-page,
+input[type="text"].pagination_current-page {
   display: inline-block;
   vertical-align: middle;
   /* We need enough room for three digits and the number spinners for type="number" inputs */
@@ -2952,17 +2958,35 @@ input[type="number"].pagination_current-page {
   font-weight: bold;
   text-align: right;
 }
-.lt-ie9 input[type="number"].pagination_current-page {
+.lt-ie9 .pagination_current-page,
+.lt-ie9 input[type="number"].pagination_current-page,
+.lt-ie9 input[type="text"].pagination_current-page {
   font-weight: normal !important;
+}
+.lt-ie8 .pagination_current-page,
+.lt-ie8 input[type="number"].pagination_current-page,
+.lt-ie8 input[type="text"].pagination_current-page {
+  zoom: 1;
+  display: inline;
+  margin: 0 4px;
 }
 .pagination_submit.btn {
   display: inline-block;
   vertical-align: middle;
   margin: 0 0 0 1em;
 }
+.lt-ie8 .pagination_submit.btn {
+  zoom: 1;
+  display: inline;
+  border: none;
+  padding-left: 1em;
+  margin: 0;
+  text-decoration: underline;
+}
 @media only screen and (min-width: 30em) {
   .pagination_form {
     border-radius: 0.28571429em;
+    margin: 0;
   }
   .pagination_prev {
     position: absolute;
