--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7097,6 +7097,45 @@ a.focus .summary_header {
         - "Note that .line-container_body no longer uses the .pull-quote class."
         - "Insets using the html content type should not be allowed to use
           layout='full'."
+    - name: More information
+      markup: |
+        <div style="overflow:hidden;">
+
+            <!-- Begin [inset] HTML -->
+            <aside class="post_inset post_inset__right line-container line-container__no-top">
+                <div class="line-container_body">
+                    <h2 class="header-slug">
+                        <span class="header-slug_inner">
+                            More information
+                        </span>
+                    </h2>
+                    <ul class="list list__unstyled">
+                        <li class="list_item list_item__spaced">
+                            <a class="list_link" href="#">
+                                Consumer help
+                            </a>
+                        </li>
+                        <li class="list_item list_item__spaced">
+                            <a class="list_link" href="#">
+                                Know before you owe
+                            </a>
+                        </li>
+                        <li class="list_item list_item__spaced">
+                            <a class="list_link" href="#">
+                                Submit a complaint
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </aside>
+            <!-- End [inset] HTML -->
+
+        </div>
+      codenotes:
+        - "[moreinfo]"
+      notes:
+        - "There are no attribute customizations allowed in [moreinfo]."
+        - "Note that .line-containeruses the .line-container__no-top modifier."
   tags:
     - cfgov-blog-docs
 */
