--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -443,7 +443,7 @@
       markup: |
         <div style="overflow:hidden;">
 
-            <!-- Begin [inset] HTML -->
+            <!-- Begin [moreinfo] HTML -->
             <aside class="post_inset post_inset__right line-container line-container__no-top">
                 <div class="line-container_body">
                     <h2 class="header-slug">
@@ -470,7 +470,7 @@
                     </ul>
                 </div>
             </aside>
-            <!-- End [inset] HTML -->
+            <!-- End [moreinfo] HTML -->
 
         </div>
       codenotes:
