--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5502,7 +5502,7 @@ img {
               .list_link
     - name: List link
       markup: |
-        <a class="list_link" href="#">List link</a>
+        <a class="list_link" href="#">List link</a>,&nbsp;
         <span class="list_link">List link</span>
       codenotes:
         - .list_link
@@ -5510,11 +5510,13 @@ img {
         - "Notice that you can use any element for .list_link."
     - name: List link large modifier
       markup: |
-        <a class="list_link list_link__large" href="#">List link</a>
-        <span class="list_link list_link__large">List link</span>
+        <a class="list_link list_link__large" href="#">List link large</a>,&nbsp;
+        <span class="list_link list_link__large">List link large</span>
       codenotes:
         - .list_link__large
       notes:
+        - "On small screens the font-size uses .h4(). At 600px the font-size
+          changes to .h3();."
         - "Notice that you can use any element for .list_link__large."
   tags:
     - cfgov-misc
@@ -5528,32 +5530,15 @@ img {
   font-weight: normal !important;
 }
 .list_link__large {
-  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
   margin-top: 0;
-  margin-bottom: 0.22727273em;
-  font-size: 1.375em;
-  line-height: 1.27272727;
-}
-.list_link__large em,
-.list_link__large i {
-  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
-  font-style: italic;
-  font-weight: normal;
-}
-.lt-ie9 .list_link__large em,
-.lt-ie9 .list_link__large i {
-  font-style: normal !important;
-}
-.list_link__large strong,
-.list_link__large b {
-  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  margin-bottom: 0.27777778em;
+  font-size: 1.125em;
+  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
   font-style: normal;
-  font-weight: bold;
+  font-weight: 500;
+  line-height: 1.22222222;
 }
-.lt-ie9 .list_link__large strong,
-.lt-ie9 .list_link__large b {
+.lt-ie9 .list_link__large {
   font-weight: normal !important;
 }
 a.list_link__large {
@@ -5580,6 +5565,37 @@ a.list_link__large:active,
 a.list_link__large.active {
   border-bottom-color: #101820;
   color: #101820;
+}
+@media only all and (min-width: 37.5em) {
+  .list_link__large {
+    font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    margin-top: 0;
+    margin-bottom: 0.22727273em;
+    font-size: 1.375em;
+    line-height: 1.27272727;
+  }
+  .list_link__large em,
+  .list_link__large i {
+    font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+    font-style: italic;
+    font-weight: normal;
+  }
+  .lt-ie9 .list_link__large em,
+  .lt-ie9 .list_link__large i {
+    font-style: normal !important;
+  }
+  .list_link__large strong,
+  .list_link__large b {
+    font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+  }
+  .lt-ie9 .list_link__large strong,
+  .lt-ie9 .list_link__large b {
+    font-weight: normal !important;
+  }
 }
 /* topdoc
   name: Unstyled list modifier
