--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -6060,7 +6060,7 @@ img {
               .list_link
     - name: List link
       markup: |
-        <a class="list_link" href="#">List link</a>
+        <a class="list_link" href="#">List link</a>,&nbsp;
         <span class="list_link">List link</span>
       codenotes:
         - .list_link
@@ -6068,11 +6068,13 @@ img {
         - "Notice that you can use any element for .list_link."
     - name: List link large modifier
       markup: |
-        <a class="list_link list_link__large" href="#">List link</a>
-        <span class="list_link list_link__large">List link</span>
+        <a class="list_link list_link__large" href="#">List link large</a>,&nbsp;
+        <span class="list_link list_link__large">List link large</span>
       codenotes:
         - .list_link__large
       notes:
+        - "On small screens the font-size uses .h4(). At 600px the font-size
+          changes to .h3();."
         - "Notice that you can use any element for .list_link__large."
   tags:
     - cfgov-misc
@@ -6086,6 +6088,50 @@ img {
 
 .lt-ie9 .list_link {
   font-weight: normal !important;
+}
+
+.list_link__large {
+  margin-top: 0;
+  margin-bottom: 0.27777778em;
+  font-size: 1.125em;
+  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.22222222;
+}
+
+.lt-ie9 .list_link__large {
+  font-weight: normal !important;
+}
+
+a.list_link__large {
+  color: #101820;
+  border-bottom-color: #101820;
+  border-bottom-width: 0 !important;
+}
+
+a.list_link__large:visited,
+a.list_link__large.visited {
+  border-bottom-color: #101820;
+  color: #101820;
+}
+
+a.list_link__large:hover,
+a.list_link__large.hover {
+  border-bottom-color: #328ed8;
+  color: #328ed8;
+}
+
+a.list_link__large:focus,
+a.list_link__large.focus {
+  border-bottom-color: #328ed8;
+  color: #328ed8;
+}
+
+a.list_link__large:active,
+a.list_link__large.active {
+  border-bottom-color: #101820;
+  color: #101820;
 }
 
 .list_link__large {
@@ -6120,36 +6166,6 @@ img {
 .lt-ie9 .list_link__large strong,
 .lt-ie9 .list_link__large b {
   font-weight: normal !important;
-}
-
-a.list_link__large {
-  color: #101820;
-  border-bottom-color: #101820;
-  border-bottom-width: 0 !important;
-}
-
-a.list_link__large:visited,
-a.list_link__large.visited {
-  border-bottom-color: #101820;
-  color: #101820;
-}
-
-a.list_link__large:hover,
-a.list_link__large.hover {
-  border-bottom-color: #328ed8;
-  color: #328ed8;
-}
-
-a.list_link__large:focus,
-a.list_link__large.focus {
-  border-bottom-color: #328ed8;
-  color: #328ed8;
-}
-
-a.list_link__large:active,
-a.list_link__large.active {
-  border-bottom-color: #101820;
-  color: #101820;
 }
 
 /* topdoc
