--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -639,7 +639,7 @@ select[multiple].success {
               .list_link
     - name: List link
       markup: |
-        <a class="list_link" href="#">List link</a>
+        <a class="list_link" href="#">List link</a>,&nbsp;
         <span class="list_link">List link</span>
       codenotes:
         - .list_link
@@ -647,11 +647,13 @@ select[multiple].success {
         - "Notice that you can use any element for .list_link."
     - name: List link large modifier
       markup: |
-        <a class="list_link list_link__large" href="#">List link</a>
-        <span class="list_link list_link__large">List link</span>
+        <a class="list_link list_link__large" href="#">List link large</a>,&nbsp;
+        <span class="list_link list_link__large">List link large</span>
       codenotes:
         - .list_link__large
       notes:
+        - "On small screens the font-size uses .h4(). At 600px the font-size
+          changes to .h3();."
         - "Notice that you can use any element for .list_link__large."
   tags:
     - cfgov-misc
@@ -662,12 +664,15 @@ select[multiple].success {
 }
 
 .list_link__large {
-    .h3();
-
+    .h4();
     a& {
         .u-link__colors(@black, @pacific-80);
         .u-link__no-border();
     }
+
+    .u-respond-to-min(600px, {
+        .h3();
+    });
 }
 
 
