--- a/static/css/post.less
+++ b/static/css/post.less
@@ -420,6 +420,32 @@
     }
 }
 
+.popular-stories {
+    .list {
+        .u-respond-to-range(600px, 800px, {
+            .grid_nested-col-group();
+            // Using .list_item__spaced within a grid column causes unwanted
+            // extra margins because grid columns suppress margin collapsing.
+            // To counteract that we need to use a negative margin on the list.
+            margin-top: unit(-24px / @base-font-size-px, em);
+
+            & .list_item {
+                .grid_column(6);
+            }
+        });
+    }
+
+    .list_link {
+        .h4();
+        .u-link__colors(@black, @pacific-80);
+        .u-link__no-border();
+
+        .u-respond-to-min(600px, {
+            .h3();
+        });
+    }
+}
+
 
 /* topdoc
   name: EOF
