--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -689,6 +689,36 @@ select[multiple].success {
 
 
 /* topdoc
+  name: Spaced list modifier
+  family: cfgov-misc
+  patterns:
+    - name: Default example
+      markup: |
+        <ul class="list list__spaced">
+            <li class="list_item">
+                <a class="list_link">List item 1</a>
+            </li>
+            <li class="list_item">
+                <a class="list_link">List item 2</a>
+            </li>
+            <li class="list_item">
+                <a class="list_link">List item 3</a>
+            </li>
+        </ul>
+      codenotes:
+        - .list.list__spaced
+  tags:
+    - cfgov-misc
+*/
+
+.list__spaced {
+    .list_item + .list_item {
+        margin-top: unit(24px / @base-font-size-px, em);
+    }
+}
+
+
+/* topdoc
   name: Spaced list item modifier
   family: cfgov-misc
   patterns:
