Updates landing page sidebar example.

--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -6130,7 +6130,7 @@ img {
             </li>
         </ul>
       codenotes:
-        - .list.list__unstyled
+        - .list.list__spaced
   tags:
     - cfgov-misc
 */
