--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5566,7 +5566,7 @@ img {
             </li>
         </ul>
       codenotes:
-        - .list.list__unstyled
+        - .list.list__spaced
   tags:
     - cfgov-misc
 */
@@ -6444,7 +6444,6 @@ img {
     position: relative;
     margin-left: -15px;
     margin-right: -15px;
-    margin-top: -1.5em;
   }
   .popular-stories .list .list_item {
     display: inline-block;
@@ -6465,6 +6464,12 @@ img {
     margin-right: 0;
     zoom: 1;
     behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+  .popular-stories .list.list__spaced {
+    margin-top: -1.5em;
+  }
+  .popular-stories .list.list__spaced .list_item {
+    margin-top: 1.5em;
   }
 }
 .popular-stories .list_link {
