--- a/static/css/post.less
+++ b/static/css/post.less
@@ -424,13 +424,23 @@
     .list {
         .u-respond-to-range(600px, 800px, {
             .grid_nested-col-group();
-            // Using .list_item__spaced within a grid column causes unwanted
-            // extra margins because grid columns suppress margin collapsing.
-            // To counteract that we need to use a negative margin on the list.
-            margin-top: unit(-24px / @base-font-size-px, em);
 
             & .list_item {
                 .grid_column(6);
+            }
+
+            // Using .list__spaced items within a grid column causes unwanted
+            // extra margins because grid columns suppress margin collapsing.
+            // To counteract that we need to use a negative margin on the list.
+            // This means we also need to add a top margin to the first list
+            // item since the default .list__spaced only applies margins to
+            // .list_item + .list_item.
+            &.list__spaced {
+                margin-top: unit(-24px / @base-font-size-px, em);
+
+                .list_item {
+                    margin-top: unit(24px / @base-font-size-px, em);
+                }
             }
         });
     }
