--- a/static/css/media-object.less
+++ b/static/css/media-object.less
@@ -12,7 +12,7 @@
       markup: |
         <article class="media-object">
             <div class="media-object_image-container">
-                <img class="media-object_image" src="http://placekitten.com/290/155" alt="">
+                <img class="media-object_image" src="http://placekitten.com/276/155" alt="">
             </div>
             <div class="media-object_text-container">
                 <p>
@@ -31,6 +31,8 @@
             .media-object_image-container
               .media-object_image
             .media-object_text-container
+      notes:
+        - "The thumbnail uses a 16:9 aspect ratio."
   tags:
     - cfgov-media-object
 */
@@ -63,8 +65,8 @@
 
         .u-respond-to-min(600px, {
             display: block;
-            width: 290px;
-            max-width: 290px;
+            width: 276px;
+            max-width: 276px;
             margin-bottom: 0;
             margin-left: -50%;
         });
