--- a/static/css/post.less
+++ b/static/css/post.less
@@ -60,7 +60,7 @@
                         </a>
                     </li>
                 </ul>
-                <img class="post_featured-img" src="http://placekitten.com/740/410" alt="alt text">
+                <img class="post_featured-img" src="http://placekitten.com/740/416" alt="alt text">
             </header>
             <div class="post_body">
                 <aside class="post_inset post_inset__right line-container">
@@ -361,6 +361,8 @@
             .post_featured-img
             .post_body
             .post_inset
+      notes:
+        - ".post_featured-img uses a 16:9 aspect ratio."
   tags:
     - cfgov-post
 */
