Include chosen itno the build system.

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -8,6 +8,9 @@
 @import (less) "../../vendor/normalize-css/normalize.css";
 @import (less) "../../vendor/normalize-legacy-addon/normalize-legacy-addon.css";
 
+// @import third party plugins
+@import (less) "../../vendor/chosen/chosen.css";
+
 // @import combined CF component Less and make any overrides
 @import (less) "../../vendor/cf-concat/cf.less";
 @cf-icons-path: "../fonts/";
