--- a/static/css/main.less
+++ b/static/css/main.less
@@ -10,6 +10,11 @@
 
 // @import third party plugins
 @import (less) "../../vendor/chosen/chosen.css";
+.chosen-container,
+.chosen-container * {
+    box-shadow: none !important;
+    font-family: Arial, sans-serif;
+}
 
 // @import combined CF component Less and make any overrides
 @import (less) "../../vendor/cf-concat/cf.less";
