--- a/static/css/main.less
+++ b/static/css/main.less
@@ -10,10 +10,66 @@
 
 // @import third party plugins
 @import (less) "../../vendor/chosen/chosen.css";
-.chosen-container,
-.chosen-container * {
-    box-shadow: none !important;
-    font-family: Arial, sans-serif;
+
+// Chosen overrides
+.chosen-container {
+    font-size: 1em;
+
+    a {
+        border-bottom: none !important;
+    }
+
+    &,
+    * {
+        box-shadow: none !important;
+        font-family: Arial, sans-serif;
+    }
+
+    &.chosen-container-multi .chosen-choices li.search-field input[type=text] {
+        height: auto;
+        margin: 0;
+        padding: unit(4px / @base-font-size-px, em);
+        color: @gray-50;
+    }
+
+    &.chosen-container .chosen-drop {
+        margin-top: 1px;
+        border-color: @pacific;
+        outline: 1px solid @pacific;
+    }
+
+    &.chosen-container-multi .chosen-choices {
+        border-color: @gray-50;
+        background-color: @white;
+        background-image: none !important;
+    }
+
+    &.chosen-container-multi.chosen-container-active .chosen-choices {
+        border-color: @pacific;
+        outline: 1px solid @pacific;
+    }
+
+    &.chosen-container-multi .chosen-choices li.search-choice {
+        margin-left: 3px;
+        border-color: @gray-50;
+        background-color: @gray-10;
+        background-image: none !important;
+        font-size: unit(13px / @base-font-size-px, em);
+        line-height: unit(12 / 13);
+    }
+
+    &.chosen-container-multi .chosen-drop .result-selected {
+        color: @gray-80;
+    }
+
+    .highlighted {
+        background-color: @pacific;
+        background-image: none !important;
+    }
+
+    &.chosen-container-multi .chosen-choices li.search-choice .search-choice-close {
+        top: 3px;
+    }
 }
 
 // @import combined CF component Less and make any overrides
