Fix for padded box in opera.

--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -1068,7 +1068,9 @@ select[multiple].success {
 
 .padded-container {
     margin: 0 0 unit(30px / @base-font-size-px, em);
-    padding: unit(1px / @base-font-size-px, em);
+    // Use pixels here, Opera doesn't like 1px represented as an em.
+    // Maybe it rounds down or something?
+    padding: 1px;
     background: @gray-10;
 
     &_body {
