--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -204,7 +204,8 @@
                         </span>
                     </a>
                 </div>
-                <dl class="filtered-by
+                <dl class="expandable_header-left
+                           filtered-by
                            filtered-by__show-on-medium
                            filtered-by__align-with-btn
                            list
