--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7451,7 +7451,8 @@ a.focus .summary_header {
                         </span>
                     </a>
                 </div>
-                <dl class="filtered-by
+                <dl class="expandable_header-left
+                           filtered-by
                            filtered-by__show-on-medium
                            filtered-by__align-with-btn
                            list
