Fixes centering in media object.

--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -5565,10 +5565,11 @@ img {
 
 .media-object_image {
   display: block;
-  width: 276px;
-  max-width: 276px;
+  width: 17.25em;
+  max-width: 17.25em;
+  max-height: 9.6875em;
   margin-bottom: 0;
-  margin-left: -50%;
+  margin-left: -3.78125em;
 }
 
 /* topdoc
