Fixes filtered by alignment.

--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -204,8 +204,7 @@
                         </span>
                     </a>
                 </div>
-                <dl class="expandable_header-left
-                           filtered-by
+                <dl class="filtered-by
                            filtered-by__show-on-medium
                            filtered-by__align-with-btn
                            list
