--- a/static/css/post.less
+++ b/static/css/post.less
@@ -487,7 +487,7 @@
             <a href="http://disqus.com" class="dsq-brlink">
                 comments powered by <span class="logo-disqus">Disqus</span>
             </a>
-            <p class="comment-policy">
+            <p class="comment_policy">
                 CF.gov Refresh follows the
                 <a href="http://www.consumerfinance.gov/comment-policy">
                     consumerfinance.gov comment policy</a>.
@@ -502,7 +502,7 @@
             script
             noscript
             .dsq-brlink
-            .comment-policy
+            .comment_policy
       notes:
         - "Will only load on authorized domains."
   tags:
@@ -513,7 +513,7 @@
     border-top: 1px solid @gray-50;
     margin-top: 3em;
 }
-.comment-policy {
+.comment_policy {
     color: #75787B;
     font-size: 0.8125em;
     font-style: italic;
