--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7090,7 +7090,7 @@ img {
             <a href="http://disqus.com" class="dsq-brlink">
                 comments powered by <span class="logo-disqus">Disqus</span>
             </a>
-            <p class="comment_policy">
+            <p class="comments_policy">
                 CF.gov Refresh follows the
                 <a href="http://www.consumerfinance.gov/comment-policy">
                     consumerfinance.gov comment policy</a>.
@@ -7105,7 +7105,7 @@ img {
             script
             noscript
             .dsq-brlink
-            .comment_policy
+            .comments_policy
       notes:
         - "Will only load on authorized domains."
   tags:
@@ -7115,7 +7115,7 @@ img {
   border-top: 1px solid #babbbd;
   margin-top: 3em;
 }
-.comment_policy {
+.comments_policy {
   color: #75787B;
   font-size: 0.8125em;
   font-style: italic;
