Make form reset a form clear.

--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -278,8 +278,12 @@
                         </div> -->
                     </div>
                     <div class="form-actions form-actions__right-on-med">
-                        <input type="reset" value="Reset filters" class="btn btn-warning btn-link form-actions_item">
-                        <input type="submit" value="Apply filters" class="btn form-actions_item">
+                        <input class="btn btn-warning btn-link form-actions_item js-form_clear"
+                               type="button"
+                               value="Clear filters">
+                        <input class="btn form-actions_item"
+                               type="submit"
+                               value="Apply filters">
                     </div>
                 </form>
             </div>
