Updates blog docs with new icons.

--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -11,22 +11,22 @@
     - name: Blog slugs
       markup: |
         <a href="#" class="category-slug">
-            <span class="cf-icon cf-icon-help"></span>
+            <span class="cf-icon cf-icon-bullhorn"></span>
             <span class="u-visually-hidden">Category:</span>
             Announcements & updates
         </a><br>
         <a href="#" class="category-slug">
-            <span class="cf-icon cf-icon-help"></span>
+            <span class="cf-icon cf-icon-information"></span>
             <span class="u-visually-hidden">Category:</span>
             Consumer information
         </a><br>
         <a href="#" class="category-slug">
-            <span class="cf-icon cf-icon-help"></span>
+            <span class="cf-icon cf-icon-dialogue"></span>
             <span class="u-visually-hidden">Category:</span>
             Engagement
         </a><br>
         <a href="#" class="category-slug">
-            <span class="cf-icon cf-icon-help"></span>
+            <span class="cf-icon cf-icon-lightbulb"></span>
             <span class="u-visually-hidden">Category:</span>
             Innovation & data
         </a>
